# Rust-Supabase-SDK

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  rustfmt.toml
cargo-supabase/: Cargo.toml
cargo-supabase/src/: codegen.rs  main.rs
docs/: codegen.md
examples/: auth_email.rs  functions_invoke.rs  postgrest_typed.rs  query.rs  realtime_changes.rs  storage_upload.rs
src/: auth.rs  count.rs  create.rs  delete.rs  error.rs  get.rs  insert.rs  lib.rs  rpc.rs  search.rs  select.rs  update.rs
src/auth/: admin.rs  mod.rs  oauth.rs  recover.rs  session_store.rs  types.rs  users.rs
src/functions/: mod.rs
src/postgrest/: builder.rs  column.rs  filters.rs  mod.rs  row.rs  typed_builder.rs  value.rs
src/realtime/: channel.rs  connection.rs  events.rs  mod.rs  protocol.rs
src/storage/: bucket_api.rs  mod.rs  types.rs
src/universals/: mod.rs
tests/: auth_tests.rs  basic_tests.rs  error_path_tests.rs  filter_tests.rs  legacy_and_remaining_mock_tests.rs  mock_coverage_tests.rs  mock_server_tests.rs  postgrest_builder_tests.rs  proptest_encoding.rs  select_tests.rs  session_store_concurrent.rs  storage_tests.rs  typed_columns_trybuild.rs  typed_query_live_tests.rs
tests/trybuild/typed-columns/: 01_wrong_table.rs  01_wrong_table.stderr  02_eq_wrong_value_type.rs  02_eq_wrong_value_type.stderr  03_gt_wrong_value_type.rs  03_gt_wrong_value_type.stderr  04_in_wrong_element_type.rs  04_in_wrong_element_type.stderr  05_is_null_on_non_nullable.rs  05_is_null_on_non_nullable.stderr  06_like_on_non_string.rs  06_like_on_non_string.stderr  07_text_search_on_non_string.rs  07_text_search_on_non_string.stderr
