[package]
name = "rust_supabase_sdk"
version = "0.2.17"
edition = "2021"
description = "An SDK kit for SupaBase so that Rust lovers can use SupaBase with the low level abstracted away. If you want new features tell me and I'll add them."
license = "MIT"
authors = ["Lachy Hislop lachie.hislop@gmail.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.13.1", features = ["json"] }
serde_json = "1.0.149"
serde = { version = "1.0.140", features = ["derive"] }
dotenv = "0.15.0"
tokio = { version = "1.49.0", features = ["full"] }
rand = "0.9.2"
uuid = { version = "1.19.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
chrono = "0.4.43"
urlencoding = "2.1.3"
url="2.5.8"