[package]
name = "rust_supabase_sdk"
version = "0.3.0"
edition = "2021"
rust-version = "1.75"
description = "An SDK kit for SupaBase so that Rust lovers can use SupaBase with the low level abstracted away. If you want new features tell me and I'll add them."
license = "MIT"
authors = ["Lachy Hislop lachie.hislop@gmail.com"]
repository = "https://github.com/Lenard-0/Rust-Supabase-SDK"
keywords = ["supabase", "postgrest", "auth", "storage", "sdk"]
categories = ["api-bindings", "database", "web-programming::http-client"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["postgrest", "auth", "storage", "functions", "rustls"]
postgrest = []
auth = []
storage = []
functions = []
realtime = ["dep:tokio-tungstenite", "dep:futures-util", "tokio/sync"]
rustls = ["reqwest/rustls"]
native-tls = ["reqwest/native-tls"]

[dependencies]
reqwest = { version = "0.13.3", default-features = false, features = ["json"] }
serde_json = "1.0.149"
serde = { version = "1.0.140", features = ["derive"] }
tokio = { version = "1.49.0", default-features = false, features = ["rt", "macros", "time"] }
uuid = { version = "1.19.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
chrono = { version = "0.4.43", default-features = false, features = ["serde", "clock"] }
percent-encoding = "2"
urlencoding = "2.1.3"
url = "2.5.8"
thiserror = "1"
tracing = "0.1"

# Realtime (opt-in). Pulled in by `realtime` feature only.
tokio-tungstenite = { version = "0.24", optional = true, default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
futures-util = { version = "0.3", optional = true, default-features = false }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
proptest = "1"
wiremock = "0.6"

[workspace]
members = [".", "cargo-supabase"]
