[package]
name = "rust_supabase_sdk"
version = "0.4.2"
edition = "2021"
rust-version = "1.75"
description = "Async Rust client for Supabase — PostgREST, Auth, Storage, Edge Functions, and Realtime. Builder-pattern API mirroring `supabase-js`, with a `cargo supabase` codegen for typed row structs."
license = "MIT"
authors = ["Lachy Hislop <lachie.hislop@gmail.com>"]
repository = "https://github.com/Lenard-0/Rust-Supabase-SDK"
homepage = "https://github.com/Lenard-0/Rust-Supabase-SDK"
documentation = "https://docs.rs/rust_supabase_sdk"
readme = "README.md"
keywords = ["supabase", "postgrest", "auth", "storage", "realtime"]
categories = ["api-bindings", "database", "asynchronous", "web-programming::http-client"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["postgrest", "auth", "storage", "functions", "rustls"]
postgrest = []
auth = []
storage = []
functions = []
realtime = ["dep:tokio-tungstenite", "dep:futures-util", "tokio/sync"]
rustls = ["reqwest/rustls"]
native-tls = ["reqwest/native-tls"]

[dependencies]
reqwest = { version = "0.13.3", default-features = false, features = ["json"] }
serde_json = "1.0.149"
serde = { version = "1.0.140", features = ["derive"] }
tokio = { version = "1.52.3", default-features = false, features = ["rt", "macros", "time"] }
uuid = { version = "1.23.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
chrono = { version = "0.4.43", default-features = false, features = ["serde", "clock"] }
percent-encoding = "2"
urlencoding = "2.1.3"
url = "2.5.8"
thiserror = "2.0.18"
tracing = "0.1"

# Realtime (opt-in). Pulled in by `realtime` feature only.
tokio-tungstenite = { version = "0.29.0", optional = true, default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
futures-util = { version = "0.3", optional = true, default-features = false }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
proptest = "1"
wiremock = "0.6.5"
trybuild = "1.0"

[workspace]
members = [".", "cargo-supabase"]
