[package]
name = "cargo-supabase"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Code-generation companion for rust_supabase_sdk. Introspects a Supabase project's PostgREST OpenAPI and emits Rust row structs."
license = "MIT"
authors = ["Lachy Hislop lachie.hislop@gmail.com"]
repository = "https://github.com/Lenard-0/Rust-Supabase-SDK"
keywords = ["supabase", "codegen", "postgrest", "cli"]
categories = ["development-tools", "command-line-utilities"]

[[bin]]
name = "cargo-supabase"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.13.3", default-features = false, features = ["json", "rustls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
